CLOSED - task 73: On mobile device drop down for health topic is grey text http://github.com/mPowering/django-mpowering/issues/issue/73

--- a/mpowering/static/mpowering/style.css
+++ b/mpowering/static/mpowering/style.css
@@ -60,6 +60,10 @@ a:hover, a:focus {
     background-color: #033f62;
 }
 
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: #fff;
+}
+
 .navbar-inverse .control-label {
     color: #fff;
     font-weight: normal;
